# streamlit_openalex

./: .gitignore  .pdm-python  Dockerfile  LICENSE  README.md  pyproject.toml
.streamlit/: config.toml  pages.toml
src/: auth_config.yaml  pagination.py  server.py  utils.py
src/ui/pages/: login_page.py  main_page.py
src/ui/utils/: auth_streamlit.py  data_processing.py  greating.py
